--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-faq-component": "^1.3.1",
     "react-icons": "^4.3.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
